--- a/src/App.css
+++ b/src/App.css
@@ -186,7 +186,7 @@ li {
 
 li small {
   font-size: 1rem;
-  color: #9a42ff;
+  color: #ffffff;
   font-weight: 500;
   padding: 8px 12px;
   background-color: #e359ff;
