--- a/src/App.css
+++ b/src/App.css
@@ -26,57 +26,86 @@ body {
   min-height: 100vh;
 }
 
+/* login-header'da */
 .login-header {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   height: 100vh;
   padding: 0 10%;
+  gap: 40px;
+  /* boşluk bırakmak için */
 }
 
-/* Sol taraftaki logo alanı */
+/* Sol taraf */
 .left-side {
+  padding-right: 300px;
   display: flex;
   justify-content: center;
   align-items: center;
-  flex: 1;
+  flex-shrink: 0;
+  /* genişliği koru */
 }
 
-/* Sağ taraftaki buton ve google ikonu alanı */
+/* Sağ taraf */
 .right-side {
+  width: 400px;
+  /* veya 260px */
+  height: 600px;
+  border-radius: 40px;
+  background-color: #ffffff;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: start;
   align-items: center;
-  flex: 1;
+  padding: 30px 20px;
+  text-align: center;
+  box-shadow: 0 6px 16px rgba(0, 0, 0, 0.1);
+  flex-shrink: 0;
+  /* genişlik değişmesin */
 }
 
-.corner-icon {
-  position: absolute;
-  top: 20px;
-  left: 20px;
-  width: 48px;
-  height: auto;
-  z-index: 1000;
-  /* Üstte kalması için */
-}
 
-/* Logo */
-.logo {
-  width: 400px;
-  height: 400px;
-  object-fit: contain;
+/* Başlık */
+.welcome-title {
+  margin-top: 20px;
+  font-size: 1.5rem;
+  font-weight: bold;
+  margin-bottom: 40px;
+  color: #333;
 }
 
 /* Google ikonu */
 .google-logo {
   width: 40px;
   height: 40px;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
+  margin-top: 100px;
+  /* biraz boşluk bırakalım */
+}
+
+button:focus,
+input:focus,
+*:focus {
+  outline: none !important;
+  box-shadow: none !important;
+}
+
+
+
+
+/* Logo */
+.logo {
+  width: 400px;
+  height: 400px;
+  object-fit: contain;
+  outline: none;
 }
 
 /* Giriş butonu */
 .login-button {
+  margin-top: 10px;
+  margin-bottom: 10px;
   padding: 15px 30px;
   font-size: 18px;
   cursor: pointer;
