--- a/src/App.css
+++ b/src/App.css
@@ -47,23 +47,26 @@ body {
   /* genişliği koru */
 }
 
-/* Sağ taraf */
 .right-side {
   width: 400px;
-  /* veya 260px */
   height: 600px;
   border-radius: 40px;
-  background-color: #ffffff;
+  background-color: rgba(255, 255, 255, 0.85);
+  /* Opaklığı hafifçe azaltıldı */
   display: flex;
   flex-direction: column;
   justify-content: start;
   align-items: center;
   padding: 30px 20px;
   text-align: center;
-  box-shadow: 0 6px 16px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 12px 24px rgba(0, 0, 0, 0.25), 0 6px 12px rgba(0, 0, 0, 0.15);
+
+  /* Daha yumuşak ve belirgin gölge */
   flex-shrink: 0;
-  /* genişlik değişmesin */
+  backdrop-filter: blur(4px);
+  /* (Opsiyonel) arka planı hafif bulanıklaştırır */
 }
+
 
 
 /* Başlık */
@@ -71,16 +74,23 @@ body {
   margin-top: 20px;
   font-size: 1.5rem;
   font-weight: bold;
-  margin-bottom: 40px;
   color: #333;
+}
+
+.welcome-text {
+  margin-top: 10px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: 600;
+  font-size: 23px;
+
 }
 
 /* Google ikonu */
 .google-logo {
   width: 40px;
   height: 40px;
-  margin-bottom: 10px;
-  margin-top: 100px;
+  margin-bottom: 7px;
+  margin-top: 50px;
   /* biraz boşluk bırakalım */
 }
 
@@ -104,7 +114,7 @@ input:focus,
 
 /* Giriş butonu */
 .login-button {
-  margin-top: 10px;
+  margin-top: 5px;
   margin-bottom: 10px;
   padding: 15px 30px;
   font-size: 18px;
